--- a/css/index.css
+++ b/css/index.css
@@ -1,16 +1,66 @@
 
 body {
     background-color: rgb(70, 69, 69);
+    max-width:900px;
+    margin: auto;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-weight: bolder;
+    font-size: 1.1em;
+    color: aliceblue;
+    font-style: normal;
+    text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.507); 
 }
 
 header {
-    background-color: green;
+    background-image:url('../img/bg4.jpg');
+    background-size: contain;
+    background-attachment: fixed;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#imagem {
+    background-image: url('../img/IMG_1116.jpg');
+    background-size: cover;
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+}
+#redes-sociais > a > img {
+    background-color: aliceblue;
+    border-radius: 50%;
+    width: 40px;
+    margin: 5px;
+    padding: 1px;
+}
+#redes-sociais > a > img:hover{
+    background-color: aqua;
+    transition: 0.3s;
 }
 
 main {
-    background-color: red;
+    background-color: rgba(0, 0, 0, 0.658);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+main > div > p {
+    text-indent: 50px;
+}
+h2{
+    color: aqua;
 }
 
 footer {
-    background-color: yellow;
+    background-color: rgba(0, 0, 0, 0.479);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+}
+#imagens-skills > img{
+    width: 50px;
+    margin: 15px;
 }
