--- a/css/index.css
+++ b/css/index.css
@@ -63,4 +63,5 @@ footer {
 #imagens-skills > img{
     width: 50px;
     margin: 15px;
+    filter: drop-shadow(3px 3px 3px rgba(0, 0, 0, 0.521));
 }
