--- a/css/index.css
+++ b/css/index.css
@@ -12,8 +12,10 @@ body {
 }
 
 header {
-    background-image:url('../img/bg4.jpg');
-    background-size: contain;
+    background-image:url('../img/bg2.jpg');
+    background-position: bottom right;
+    background-size: cover;
+    background-repeat: no-repeat;
     background-attachment: fixed;
     padding: 20px;
     display: flex;
